--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "徐添翼 XuTianyi <xutianyi12@outlook.com>",
   "scripts": {
     "build": "max build",
-    "dev": "max dev",
+    "dev": "cross-env PORT=4200 max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
     "setup": "max setup",
@@ -19,6 +19,7 @@
     "@ant-design/cssinjs": "^1.17.0",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "cross-env": "^7.0.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
