--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-packagejson": "^2.4.3",
     "tailwindcss": "^3",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "umi-presets-pro": "^2.0.3"
   }
 }
